--- a/application/index/view/assembly/assembly-info.html
+++ b/application/index/view/assembly/assembly-info.html
@@ -15,19 +15,21 @@
         <button class="layui-btn" onclick="x_admin_show('添加组件图纸','{:url(\'index/Assembly/assemblyAdd\')}',500,500)"><i class="layui-icon"></i>添加组图纸</button>
         <span class="x-right" style="line-height:40px">共有数据：{$assembluCount} 条</span>
       </xblock>
-      <table class="layui-table">
-        <thead>
+      <div class="container-wrap">
+        <div class="box-1">
+          <table class="layui-table">
+            <thead>
           <tr>
             <th>
               <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
             </th>
-            <th>操作</th>
+            <th width="10%"> 操作</th>
             <th>组件编号</th>
             <th>工装类型</th>
             <th>备注</th>
             <th>创建人</th>
-            <th>最后修改人</th>
             <th>创建时间</th>
+            <th>最后修改人</th>
             <th>修改时间</th>
           </tr>
         </thead>
@@ -44,19 +46,21 @@
               <a title="删除" onclick="delete_(this,'{$info.id}')" href="javascript:;">
                 <i  style="color:red;" class="layui-icon"></i>
               </a>
+              <button class="layui-btn layui-btn layui-btn-xs" onclick="x_admin_show('生成内图','{:url(\'index/Internal/internalAddAssembly\',[\'assembly_code\'=>$info.id])}',400,400)"><i class="layui-icon layui-icon-add-circle"></i>内图</button>
             </td>
             <td>{$info.assembly_code}</td>
             <td>{$info.looling_type_name}</td>
             <td>{$info.remark}</td>
             <td>{$info.create_name}</td>
-            <td>{$info.modify_name}</td>
             <td>{$info.create_time}</td>
+            <td>{$info.modify_name}</td>
             <td>{$info.update_time}</td>
-
           </tr>
         {/volist}
         </tbody>
       </table>
+        </div>
+      </div>
       <div class="page">
         {$assemblyInfo|raw}
       </div>
