--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -127,7 +127,7 @@
         layer.confirm('确认要删除吗？',function(index){
             //捉到所有被选中的，发异步进行删除
             $.ajax({
-                url:"/index/Blueprint/processDelAll",
+                url:"{:url('/index/Blueprint/processDelAll')}",
                 type:"POST",
                 dataType:"json",
                 data:{
