--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -9,7 +9,7 @@
           </ul>
           <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
-                <iframe src="{:url('index/index/welcome')}" frameborder="0" scrolling="yes" class="x-iframe"></iframe>
+                <iframe src="{:url('/index/index/welcome')}" frameborder="0" scrolling="yes" class="x-iframe"></iframe>
             </div>
           </div>
         </div>
