图纸明细添加功能实现

--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">客户类型</label>
+                <label class="layui-form-label">客户简称</label>
                 <div class="layui-input-block">
                     <input type="text" class="layui-input"  name="client_id" value="{$blueprintInfo.client_id}"  >
                 </div>
@@ -63,7 +63,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">材料形状</label>
                 <div class="layui-input-block">
-                    <input type="text" class="layui-input"  name="material_type" value="{$blueprintInfo.material_type}"  >
+                    <input type="text" class="layui-input"  name="material_type" value="{$blueprintInfo.material_type}"  id="material_type">
                 </div>
             </div>
             <div class="layui-form-item">
