--- a/application/index/view/internal/internal-edit.html
+++ b/application/index/view/internal/internal-edit.html
@@ -5,35 +5,33 @@
           <div class="layui-form-item">
               <label for="drawing_Internal_id" class="layui-form-label">内部编号</label>
               <div class="layui-input-inline">
-                  <input type="text" id="drawing_Internal_id" name="drawing_Internal_id" disabled lay-verify="required"  value="{$code}" autocomplete="off" class="layui-input">
-                    <input type="hidden" value="{$assemblyCode_}" name="assembly_code">
+                  <input type="text" id="drawing_Internal_id" name="drawing_Internal_id" disabled lay-verify="required"  autocomplete="off" class="layui-input" value="{$internal.drawing_Internal_id}">
+                <input type="hidden" name="id" value="{$internal.id}">
                   <p id="pLog" style="color:red"></p>
               </div>
           </div>
+
           <div class="layui-form-item">
               <label for="remark" class="layui-form-label">备注</label>
               <div class="layui-input-inline">
-                  <input type="text" id="remark" name="remark"  autocomplete="off" class="layui-input">
+                  <input type="text" id="remark" name="remark" lay-verify="required" autocomplete="off" class="layui-input" value="{$internal.remark}">
               </div>
           </div>
             <div class="layui-form-item">
-                <label for="create_name" class="layui-form-label">创建人</label>
+                <label for="modify_name" class="layui-form-label">修改人</label>
                 <div class="layui-input-inline">
-                    <input type="text" id="create_name" name="create_name" lay-verify="required" autocomplete="off" value="ADMIN"  disabled class="layui-input">
+                    <input type="text" id="modify_name" name="modify_name" autocomplete="off" value="ADMIN"  disabled class="layui-input">
                 </div>
             </div>
           <div class="layui-form-item">
               <label class="layui-form-label"></label>
               <button class="layui-btn" lay-submit lay-filter="addId" >
-                  增加
+                  修改
               </button>
           </div>
       </form>
     </div>
     <script>
-
-
-
         layui.use(['form'], function(){
           $ = layui.jquery;
           var form = layui.form,layer = layui.layer;
@@ -41,9 +39,9 @@
           //监听提交
           form.on('submit(addId)', function(data){
             //console.log(data);
-              $.post("{:url('index/Internal/internalAddAssembly')}",data.field,function(info){
+              $.post("{:url('index/Internal/edit')}",data.field,function(info){
                   if (info) {
-                      layer.alert("添加成功", {icon: 6},function () {
+                      layer.alert("修改成功", {icon: 6},function () {
                           window.parent.location.reload();  //刷新父级页面
                           // 获得frame索引
                           var index = parent.layer.getFrameIndex(window.name);
@@ -51,7 +49,7 @@
                           parent.layer.close(index);
                       });
                   }else{
-                      layer.alert("添加失败", {icon: 5});
+                      layer.alert("修改失败", {icon: 5});
                   }
               },'json');
               return false;
