--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -102,6 +102,12 @@
                             <cite>工装类型</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/material/material')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>材料管理</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             <li>
@@ -196,13 +202,7 @@
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
             </li>
-            <li>
-                <a _href="{:url('index/material/material')}">
-                    <i class="icon iconfont">&#xe698;</i>
-                    <cite>材料管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-            </li>
+
             <li>
                 <a _href="{:url('index/order/order')}">
                     <i class="icon iconfont">&#xe702;</i>
