--- a/application/index/view/blueprint/add-drawing-externa.html
+++ b/application/index/view/blueprint/add-drawing-externa.html
@@ -31,6 +31,7 @@
                 $("#drawing_external_id").val("{$createId}");
                 $("#pLog").text("当前是自动生成编号状态，请勿修改");
             });
+            $("#createId").click();
         });
 
 
